--- a/src/subscription/index.scss
+++ b/src/subscription/index.scss
@@ -29,6 +29,9 @@
   .product-wrapper {    
     .col-7 {          
       @extend .pl-0;
+      p {
+        @extend .text-gray-500;
+      }
     }
     @include media-breakpoint-down(xl){ 
       @include product-title-column;
