--- a/src/subscription/index.scss
+++ b/src/subscription/index.scss
@@ -66,11 +66,46 @@
       @extend small;
     }
   }
+
+  //skeleton changes
+  .sub-cart-skeleton {
+    .sub-skeleton-title{
+      flex: 1;
+    }
+    .sub-skeleton-badge{
+      width: 50px;
+      height: 24px
+    }
+    .embed-responsive {
+      border: 4px solid white;
+      box-shadow: 0px 0px 0px 1px $light-700;
+    }
+    .price {
+      height: 19px;
+      .section-left {
+        display: flex;
+        flex: 1;
+      }
+      .section-right {
+        display: flex;
+        flex: 1;
+        justify-content: flex-end;
+      }
+    }
+  }
 }
 
+// confirmation modal styles overrides
 // .confirmation-modal {
-//   .pgn__modal-body {
-//     @include media-breakpoint-down(xs){ 
+//   .pgn__modal-title {
+//     margin-inline-end: 0;
+//   }
+//   @include media-breakpoint-down(xs){ 
+//     .pgn__modal-title {
+//       font-size: 14px;
+//       line-height: 20px;
+//     }
+//     .pgn__modal-body {
 //       font-size: 14px;
 //       line-height: 24px;
 //     }
